; ModuleID = '/home/carl/AnghaBench/linux/arch/nios2/kernel/extr_time.c_nios2_timer_set_next_event.c'
source_filename = "/home/carl/AnghaBench/linux/arch/nios2/kernel/extr_time.c_nios2_timer_set_next_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clock_event_device = type { i32 }
%struct.nios2_clockevent_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.clock_event_device*)* @nios2_timer_set_next_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nios2_timer_set_next_event(i64 %0, %struct.clock_event_device* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.clock_event_device*, align 8
  %5 = alloca %struct.nios2_clockevent_dev*, align 8
  store i64 %0, i64* %3, align 8
  store %struct.clock_event_device* %1, %struct.clock_event_device** %4, align 8
  %6 = load %struct.clock_event_device*, %struct.clock_event_device** %4, align 8
  %7 = call %struct.nios2_clockevent_dev* @to_nios2_clkevent(%struct.clock_event_device* %6)
  store %struct.nios2_clockevent_dev* %7, %struct.nios2_clockevent_dev** %5, align 8
  %8 = load %struct.nios2_clockevent_dev*, %struct.nios2_clockevent_dev** %5, align 8
  %9 = getelementptr inbounds %struct.nios2_clockevent_dev, %struct.nios2_clockevent_dev* %8, i32 0, i32 0
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @nios2_timer_config(i32* %9, i64 %10, i32 0)
  ret i32 0
}

declare dso_local %struct.nios2_clockevent_dev* @to_nios2_clkevent(%struct.clock_event_device*) #1

declare dso_local i32 @nios2_timer_config(i32*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
